# hesp-manifest-rs

./: .gitignore  Cargo.toml  README.md  bitbucket-pipelines.yml
.github/workflows/: ci.yml  publish.yml
.run/: All Tests.run.xml  Clippy.run.xml  Fmt.run.xml
examples/: alpha.rs  empty.rs  json.rs
scripts/: build-cache.sh  extract-cache.sh
src/: error.rs  lib.rs  parse.rs
src/data/: mod.rs
src/data/v1_0_0/: audio.rs  metadata.rs  mod.rs  presentation.rs  time_source.rs  video.rs
src/data/v1_1_0/: audio.rs  manifest.rs  mod.rs  presentation.rs  stream.rs
src/data/v2_0_0/: audio.rs  manifest.rs  metadata.rs  mod.rs  presentation.rs  video.rs
src/event/: init_data.rs  manifest_update.rs  mod.rs
src/legacy/v1_0_0/: audio.rs  manifest.rs  mod.rs  presentation.rs  time_source.rs  video.rs
src/legacy/v1_1_0/: audio.rs  manifest.rs  mod.rs  presentation.rs  stream.rs
src/model/: address.rs  date_time.rs  duration.rs  frame_rate.rs  language.rs  manifest.rs  media.rs  mime.rs  mod.rs  ntp.rs  presentation.rs  presentation_event.rs  resolution.rs  scaled_value.rs  segment.rs  switching_set.rs  switching_set_protection.rs  time_bounds.rs  time_source.rs  track.rs  track_path.rs  transmission.rs
src/model/audio/: data.rs  mime.rs  mod.rs  switching_set.rs  track.rs
src/model/manifest/: base.rs  data.rs  live.rs  manifest.rs  mod.rs  multicast.rs  stream.rs  unicast.rs  version.rs
src/model/metadata/: data.rs  mod.rs  switching_set.rs  track.rs
src/model/multicast/: manifest.rs  mod.rs  presentation.rs  track.rs  transmission.rs
src/model/presentation/: data.rs  event.rs  mod.rs  multicast.rs  presentation.rs
src/model/scale/: mod.rs  scaled_value.rs  unsigned_scaled_value.rs
src/model/switching_set/: mod.rs  protection.rs  (+1 more)
src/util/: data.rs  entity.rs  mod.rs  number.rs  timestamp.rs  url.rs  validate.rs
tests/: alpha-manifest.json  empty-manifest.json  example-manifest.json  multicast-manifest.json  serde_json.rs  v1_0_0-manifest.json  v1_1_0-manifest.json  v2_0_0-manifest.json
(+25 files in other folders)
