[package]
name = "hesp-manifest"
version = "0.3.1-alpha.4"
edition = "2021"
authors = ["THEO Technologies <info@theoplayer.com>"]
publish = ["theo"]

[dependencies]
chrono = "0.4"
itertools = "0.10"
log = "0.4"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.9.4"
serde_path_to_error = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
url = { version = "2", features = ["serde"] }
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"