[package]
name = "hesp-manifest"
version = "0.5.1"
edition = "2021"
authors = ["THEO Technologies <info@theoplayer.com>"]
publish = ["theo"]

[dependencies]
chrono = "0.4"
itertools = "0.12.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.5.1"
serde_path_to_error = "0.1"
uuid = { version = "1.1", features = ["serde", "v4"] }
url = { version = "2", features = ["serde"] }
thiserror = "1.0"
gcd = "2.1.0"

[dev-dependencies]
anyhow = "1.0"