[package]
name = "hesp-manifest"
version = "2.0.1"
edition = "2021"
authors = ["THEO Technologies <info@theoplayer.com>"]
description = "Rust library for serialization and deserialization the HESP manifest"
license = "MIT"
homepage = "https://github.com/THEOplayer/hesp-manifest-rs"
repository = "https://github.com/THEOplayer/hesp-manifest-rs"
readme = "README.md"

[dependencies]
chrono = "0.4"
itertools = "0.12"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.6"
serde_path_to_error = "0.1"
uuid = { version = "1.7", features = ["serde", "v4"] }
url = { version = "2.5", features = ["serde"] }
thiserror = "1.0"
gcd = "2.3"

[dev-dependencies]
anyhow = "1.0"

[lints.clippy]

# Pedantic
pedantic = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

nursery = "warn"
fallible_impl_from = "allow"